# SkillUp_api

./: pyproject.toml
SkillUp_api/: manage.py
SkillUp_api/SkillUp_api/: asgi.py  settings.py  urls.py  wsgi.py
